<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_number_layout_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/azulOscuro"
        app:boxBackgroundColor="@color/ic_launcher_background"
        app:boxStrokeColor="@color/azul"
        app:boxStrokeErrorColor="@color/azul"
        app:boxStrokeWidth="3dp"
        app:hintTextColor="@color/azulOscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:hint="@string/first_number"
            android:inputType="number|numberDecimal|numberSigned"
            android:textColor="@color/azulOscuro"
            android:textColorHint="@color/azulOscuro" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/second_number_layout_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/azulOscuro"
        app:boxBackgroundColor="@color/ic_launcher_background"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@color/azulOscuro"
        app:boxStrokeWidth="3dp"
        app:hintTextColor="@color/azulOscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_number_layout_edit_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/second_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:hint="@string/second_number"
            android:inputType="number|numberDecimal|numberSigned"
            android:textColor="@color/azulOscuro"
            android:textColorHint="@color/azulOscuro" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_number_layout_edit_text">

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/azul"
            android:text="@string/add"
            android:textColor="@color/azulOscuro"
            android:textColorHighlight="@color/azulOscuro"
            android:textColorHint="@color/azulOscuro"
            android:textColorLink="@color/azulOscuro"
            android:textStyle="bold" />

        <Button
            android:id="@+id/substract_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/azul"
            android:text="@string/substract"
            android:textColor="@color/azulOscuro"
            android:textStyle="bold" />

        <Button
            android:id="@+id/multiply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/azul"
            android:text="@string/multiply"
            android:textColor="@color/azulOscuro"
            android:textStyle="bold" />

        <Button
            android:id="@+id/divide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/azul"
            android:text="@string/divide"
            android:textColor="@color/azulOscuro"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/resullt_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:shadowColor="@color/azulOscuro"
        android:text="@string/result"
        android:textColor="@color/azulOscuro"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:text="@string/welcome"
        android:textColor="@color/azulOscuro"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>